--- a/index.html
+++ b/index.html
@@ -37,6 +37,20 @@
 			</div>
 		</div>
 	</header>
+	<section class="sub-header">
+		<img src="img/logos.png" alt="">
+		<div>
+			<h4>Bundle with any Hulu Plan & Save.</h4>
+			<h3>Get Hulu, Disney+, and ESPN.</h3>
+			<a href="#" class="sub-link">Details</a>
+		</div>
+		<div>
+			<a href="" class="btn btn-outline">Get Bundle</a>
+			<a href="#" class="sub-link">
+				Terms apply
+			</a>
+		</div>
+	</section>
 
 
 	<script src="main.js"></script>
