added live section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,34 @@
 			</div>
 		</div>
 	</section>
+	<!-- Live -->
+	<section class="live">
+		<div class="live-border">
+			<h4>
+				Hulu + Live Tv
+			</h4>
+			<div class="text-xl">
+				Live TV Makes It Better
+			</div>
+			<div class="sub-text">
+				Make the switch from cable. Get 75+ top channels with your favorite
+				live sports, news, and events - plus the entire Hulu streaming
+				library.
+			</div>
+			<div class="legal-text">
+				Live TV plan required. Regional restrictions, blackouts and additional
+				terms apply. See details
+
+			</div>
+			<a href="#">View Channel in Your Area</a>
+		</div>
+
+	</section>
+	<section class="live-sports">
+		<section class="live-sports-content">
+
+		</section>
+	</section>
 
 
 	<script src="main.js"></script>
