added live sports section

--- a/index.html
+++ b/index.html
@@ -115,6 +115,34 @@
 	</section>
 	<section class="live-sports">
 		<section class="live-sports-content">
+			<div class="text-xl">
+				Live Sports
+			</div>
+			<div class="sub-text">
+				Catch your games at home or on the go. Stream live games from major
+				college and pro leagues including the NCAA®, NBA, NHL, NFL, and more.
+			</div>
+			<div class="live-sports-logos">
+				<div>
+					<img src="img/live-sports-logo-1.png" alt="">
+				</div>
+				<div>
+					<img src="img/live-sports-logo-2.png" alt="">
+				</div>
+
+				<div>
+
+					<img src="img/live-sports-logo-3.svg" alt="">
+				</div>
+				<div>
+					<img src="img/live-sports-logo-4." alt="">
+				</div>
+
+			</div>
+			<div class="legal-content">
+				Live TV plan required. Regional restrictions, blackouts and additional
+				terms apply. See details
+			</div>
 
 		</section>
 	</section>
