added the footer section

--- a/index.html
+++ b/index.html
@@ -197,6 +197,28 @@
 			</div>
 		</div>
 	</footer>
+	<div class="modal">
+		<div class="modal-box">
+			<div class="modal-body">
+				<h3>Login</h3>
+				<div class="form-control">
+					<label for="email">Email</label>
+					<input type="email" id="email">
+				</div>
+				<div class="form-control">
+					<label for="password">password</label>
+					<input type="password" id="password">
+				</div>
+				<p><a href="#">Forget your email or password</p>
+
+			</div>
+			<div class="modal-footer">
+				<p>Don't have an account?<a href="#">start your free trial</a></p>
+				<button class="btn btn-dark">Log In</button>
+			</div>
+			<img src="img/close.svg" alt="" class="close">
+		</div>
+	</div>
 
 
 	<script src="main.js"></script>
