--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
 			</div>
 		</div>
 	</footer>
-	<div class="modal">
+	<div class="modal">r
 		<div class="modal-box">
 			<div class="modal-body">
 				<h3>Login</h3>
